fix for icons getting too small while zooming

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ html, body {
   border: 1px solid #888;
   width: 90%;
   max-width: 500px;
-  max-height: 50vh; /* Restrict height */
+  max-height: 60vh; /* Restrict height */
   overflow-y: auto;
   color: #fff;
   border-radius: 8px;
